--- a/index.html
+++ b/index.html
@@ -31,49 +31,51 @@
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/index.html">Stevns Klint</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/Geomuseum_Faxe_Kalkbrud_fossil_ikon.png">
-                                    <a href="">Geomuseum Faxe</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Geomuseum Faxe</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/stevns_naturcenter_ikon.png">
-                                    <a href="">Stevns Naturcenter</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Naturcenter</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/Koldkrigsmuseum_stevnsfort_kalklandet_ikon.png">
-                                    <a href="">Koldkrigsmuseum</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Koldkrigsmuseum</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                             </li>
                         </ul>
                     </div><!-- /scroller -->
                 </nav>
-                </li>
+            </li>
             <li><img class="mobileLogo" src="slider/ikoner/kalklandet_lille_ikon.png"></li>
-            <li><p class="mobileTekst"> en del af Unesco's verdensarv</p></li>
+            <li>
+                <p class="mobileTekst"> en del af Unesco's verdensarv</p>
+            </li>
             <li><img class="myLogo" src="slider/museum_kalklandet_logo_1.png" /></li>
         </ul>
         <header>
@@ -94,29 +96,32 @@
         </header>
     </div><!-- /container -->
     <div class="area-wrapper">
-    <main class="kalken">
-        <h1 class="overskrift"></h1>
-        <section class="indhold">
+        <main class="kalken">
+            <h1 class="overskrift"></h1>
+            <section class="indhold">
 
-        </section>
-        <section class="kalken">
+            </section>
+            <section class="kalken">
 
-        </section>
-    </main>
-    <!--------->
-    <template>
-        <article class="kalk">
-            <h2 class="grid-item"></h2>
-            <p class="grid-item"></p>
-            <img class="grid-item"src="" alt="" />
-            <div class="grid-item"></div>
-        </article>
-    </template>
-</div>
-<!-- Footer -->
-    <footer class="page-footer"><!-- Footer -->
-        <div class="conta"><!-- Footer Elements -->
-            <div class="row"><!-- Grid row-->
+            </section>
+        </main>
+        <!--------->
+        <template>
+            <article class="kalk">
+                <h2 class="grid-item"></h2>
+                <p class="grid-item"></p>
+                <img class="grid-item" src="" alt="" />
+                <div class="grid-item"></div>
+            </article>
+        </template>
+    </div>
+    <!-- Footer -->
+    <footer class="page-footer">
+        <!-- Footer -->
+        <div class="conta">
+            <!-- Footer Elements -->
+            <div class="row">
+                <!-- Grid row-->
                 <!-- Grid column -->
                 <div class="col-md-12 py-5">
                     <div class="mb-5 flex-center">
@@ -131,11 +136,14 @@
                         </a><!-- Google +-->
                         <a class="ins-ic">
                             <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a><!--Instagram-->
+                        </a>
+                        <!--Instagram-->
                         <a class="pin-ic">
                             <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                        </a><!--Pinterest-->
-                    </div><!--flext-->
+                        </a>
+                        <!--Pinterest-->
+                    </div>
+                    <!--flext-->
                 </div><!-- Grid column -->
             </div><!-- Grid row-->
         </div><!-- Footer Elements -->
@@ -152,7 +160,7 @@
         document.addEventListener("DOMContentLoaded", start);
 
         function start() {
-           hentJson1();
+            hentJson1();
             hentJson2();
         }
 
@@ -250,6 +258,7 @@
             x[myIndex - 1].style.display = "block";
             setTimeout(carousel, 3000); // Change image every 2 seconds
         }
+
     </script>
 </body>
 
