--- a/koldkrigsmuseum.html
+++ b/koldkrigsmuseum.html
@@ -43,29 +43,29 @@
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/stevns_naturcenter_ikon.png">
-                                    <a href="">Stevns Naturcenter</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Naturcenter</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/Koldkrigsmuseum_stevnsfort_kalklandet_ikon.png">
-                                    <a href="">Koldkrigsmuseum</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Koldkrigsmuseum</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Viden</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
                                 </div>
                             </li>
                         </ul>
