tester nyt Splash på undersider. Image optimeres først  når det kører

--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -13,7 +13,32 @@
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style type="text/css">
+        header{
+            display: none;
+        }
+        #splash {
+    display: none !important;
+}
+        #mobileSplash {
+    display: none !important;
+}
+        .banner_inner{
+    display: none !important;
+}
+        main {
+            max-width: 100%;
+            margin-top: 60px;
+        }
+        h1.animate {
+    display: none !important;
+}
+        nav{
+    margin-top: -30px;
+    }
     </style>
+    .nav{
+    margin-top: -30px;
+    }
 </head>
 
 <body>
