endelig css, som Brackets sletter ved commit. Dygtig!

--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -32,13 +32,10 @@
         h1.animate {
     display: none !important;
 }
-        nav{
+        .navi{
     margin-top: -30px;
     }
     </style>
-    .nav{
-    margin-top: -30px;
-    }
 </head>
 
 <body>
