forside geomuseet. Grid, footer og meget mere

--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -6,35 +6,38 @@
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geomuseet Faxe</title>
-    <meta name="description" content="Geomuseet Faxe, Kalklandet Stevns Klint. En del af Unesco's verdensarv" />
+    <meta name="description" content="Geomuseet Faxe ved Stevns Klint. En del af Unesco's verdensarv" />
     <meta name="keywords" content="Stevns Klint, UNESCO Verdensarv, Kalklandet" />
     <meta name="author" content="Charlotte Fuchs" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <link rel="stylesheet" type="text/css" href="css/component.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <style type="text/css">
-        header{
+        header {
             display: none;
         }
+
         #splash {
-    display: none !important;
-}
+            display: none !important;
+        }
+
         #mobileSplash {
-    display: none !important;
-}
-        .banner_inner{
-    display: none !important;
-}
+            display: none !important;
+        }
+
+        .banner_inner {
+            display: none !important;
+        }
+
         main {
             max-width: 100%;
-            margin-top: 60px;
+            margin-top: 30px;
         }
+
         h1.animate {
-    display: none !important;
-}
-        .navi{
-    margin-top: -30px;
-    }
+            display: none !important;
+        }
+
     </style>
 </head>
 
@@ -48,12 +51,24 @@
                         <ul class="menu">
                             <li class="search-item">
                                 <input placeholder="Search" type="search" class="search">
-                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png"><span>Søg</span></a>
+                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Søg</span></a>
+                            </li>
+                            <li>
+                                <div>
+                                    <img class="icon" src="slider/ikoner/kalklandet_lille_ikon.png">
+                                    <a href="http://medicinolie.dk/kalklandet/index.html">Kalklandet</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <img class="icon" src="slider/ikoner/K_stevnsfort_koldkrigsmuseum.png">
+                                    <a href="http://medicinolie.dk/kalklandet/koldkrigsmuseum.html">Koldkrigsmuseum</a>
+                                </div>
                             </li>
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/index.html">Stevns Klint</a>
+                                    <a href="http://medicinolie.dk/kalklandet/stevns_museum.html">Stevns Museum</a>
                                 </div>
                             </li>
                             <li>
@@ -65,37 +80,53 @@
                             <li>
                                 <div>
                                     <img class="icon" src="slider/ikoner/stevns_naturcenter_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Naturcenter</a>
+                                    <a href="http://medicinolie.dk/kalklandet/stevns_naturcenter.html">Stevns Naturcenter</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/Koldkrigsmuseum_stevnsfort_kalklandet_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Koldkrigsmuseum</a>
+                                    <img class="icon" src="slider/ikoner/stevns_fyr_ikon.png">
+                                    <a href="http://medicinolie.dk/kalklandet/stevns_fyr.html">Stevns Fyr</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
-                                </div>
-                                <div>
-                                    <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
+                                    <img class="icon" src="slider/ikoner/lille_heddinge_rytterskole.png">
+                                    <a href="http://medicinolie.dk/kalklandet/lille_heddinge_rytterskole.html">Lille Heddinge Rytterskole</a>
                                 </div>
                             </li>
                             <li>
                                 <div>
-                                    <img class="icon" src="slider/ikoner/STEVNS_MUSEUM_ikon.png">
-                                    <a href="http://medicinolie.dk/kalklandet/geomuseet_Faxe.html">Stevns Klint</a>
+                                    <img class="icon" src="slider/ikoner/haslev_museum_ikon.png">
+                                    <a href="http://medicinolie.dk/kalklandet/haslevMuseum.html">Haslev Museum</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <img class="icon" src="slider/ikoner/videnOm.png">
+                                    <a href="http://medicinolie.dk/kalklandet/videnOm.html">Viden om</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <img class="icon" src="slider/ikoner/aktiviteter.png">
+                                    <a href="http://medicinolie.dk/kalklandet/aktiviteter.html">Aktiviteter</a>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <img class="icon" src="slider/ikoner/aboutUs.png">
+                                    <a href="http://medicinolie.dk/kalklandet/aboutUs.html">Om os</a>
                                 </div>
                             </li>
                         </ul>
                     </div><!-- /scroller -->
                 </nav>
-              </li>
+            </li>
             <li><img class="mobileLogo" src="slider/ikoner/kalklandet_lille_ikon.png"></li>
-            <li><p class="mobileTekst"> en del af Unesco's verdensarv</p></li>
+            <li>
+                <p class="mobileTekst"> en del af Unesco's verdensarv</p>
+            </li>
             <li><img class="myLogo" src="slider/museum_kalklandet_logo_1.png" /></li>
         </ul>
         <header>
@@ -104,10 +135,11 @@
                 <div class="container">
                     <h1 class="animate">Stevns Klint</h1>
                     <div class="banner_inner">
-                        <img class="mySlides" src="slider/geomuseet_faxe.png" />
                         <img class="mySlides" src="slider/Koldkrigsmuseum_stevnsfort_kalklandet.png" />
+                        <img class="mySlides" src="slider/geomuseet_faxe.png" />
                         <img class="mySlides" src="slider/stevns_naturcenter.png" />
                         <img class="mySlides" src="slider/stevns_museum_kalklandet_unescos_verdensarv.png" />
+                        <img class="mySlides" src="slider/rytterskolen_lille_heddinge.png" />
                         <img class="mySlides" src="slider/haslev_museum1.png" />
                         <img class="mySlides" src="slider/stevns_fyr.png" />
                     </div>
@@ -116,57 +148,85 @@
         </header>
     </div><!-- /container -->
     <div class="area-wrapper">
-    <main class="kalken">
-        <h1 class="overskrift"></h1>
-        <section class="indhold">
+        <main class="kalken">
+            <h1 class="overskrift" class="pagesGrid-item"></h1>
+            <section class="indhold" class="pagesGrid-item-container">
 
-        </section>
-        <section class="kalken">
+            </section>
+            <section class="kalken" class="pagesGrid-item">
 
-        </section>
-    </main>
-    <!--------->
-    <template>
-        <article class="kalk">
-            <h2 class="grid-item"></h2>
-            <p class="grid-item"></p>
-            <img class="grid-item" class="billede"src="" alt="" />
-            <div class="grid-item"></div>
-        </article>
-    </template>
-</div>
+            </section>
+        </main>
+        <!--------->
+        <template>
+            <article class="kalk">
+                <h2 class="grid-item"></h2>
+                <h3 class="grid-item"></h3>
+                <p class="grid-item"></p>
+                <img class="grid-item" class="billede" src="" alt="" />
+                <div class="grid-item"></div>
+            </article>
+        </template>
+    </div>
 
-<!-- Footer -->
-    <footer class="page-footer">
-        <div class="conta"><!-- Footer Elements -->
-            <div class="row"><!-- Grid row-->
-                <!-- Grid column -->
-                <div class="col-md-12 py-5">
+    <!-- Footer -->
+        <div id="wrapper">
+        <div id="footer">
+            <div class="breakFooter">
+                <div class="footerFloat">
+                    <h4>Sociale medier</h4>
                     <div class="mb-5 flex-center">
                         <a class="fb-ic">
                             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
                         </a><!-- Facebook -->
-                        <a class="tw-ic">
-                            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a><!-- Twitter -->
-                        <a class="gplus-ic">
-                            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a><!-- Google +-->
                         <a class="ins-ic">
                             <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                        </a><!--Instagram-->
+                        </a>
+                        <!--Instagram-->
                         <a class="pin-ic">
                             <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                        </a><!--Pinterest-->
-                    </div><!--flext-->
-                </div><!-- Grid column -->
-            </div><!-- Grid row-->
-        </div><!-- Footer Elements -->
-        <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">
-            <h3>© 2019. ❤ </h3>
-        </div><!-- Copyright -->
-    </footer><!-- Footer -->
+                        </a>
+                        <!--Pinterest-->
+                    </div>
+                    <!--flext-->
+                </div>
+                <div class="footerFloat">
+                    <h4>Vores opgave</h4>
+                    <ul>
+                        <li>Formidling</li>
+                        <li>Samarbejds partnere</li>
+                        <li>Stevns Klint som verdensarv</li>
+                    </ul>
+                </div>
+            </div>
+          <div class="footerFloat">
+                    <h4>Hvem er vi</h4>
+                    <ul>
+                        <li>Østsjællands Museumsforening</li>
+                        <li>Ledige stillinger</li>
+                        <li>Museets historie</li>
+                        <li>Medarbejdere</li>
+                        <li>Frivillige</li>
+                        <li>Bestyrelse</li>
+                        <li>Sponsorer</li>
+                        <li>Presse</li>
+                    </ul>
+                </div>
+            <div class="breakFooter">
+                <div class="footerFloat">
+                    <h4>Find vej</h4>
+                    <ul>
+                        <li>Guide med tog</li>
+                        <li>Guide med cykel</li>
+                    </ul>
+                    <div class="kort"><iframe id="kort" src="https://maps.google.com/maps?hl=da&ie=UTF8&t=m&ll=55.279616,12.444291&spn=0.004278,0.00912&z=16&output=embed" frameborder="0"></iframe><a href="https://maps.google.com/maps?hl=da&ie=UTF8&t=m&ll=55.279616,12.444291&spn=0.004278,0.00912&z=16&source=embed"></a></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <h3>© 2019. ❤ </h3>
+    </div><!-- Copyright -->
     <!--Script-->
     <script>
         let indhold = {};
@@ -175,7 +235,7 @@
         document.addEventListener("DOMContentLoaded", start);
 
         function start() {
-           hentJson1();
+            hentJson1();
             hentJson2();
         }
 
@@ -205,16 +265,18 @@
             kalken.forEach(kalk => {
 
                 let klon = temp.cloneNode(true).content;
-                klon.querySelector("h2").innerHTML = kalk.overskrift;
-                //klon.querySelector("h2").innerHTML = kalk.content.rendered;
+                /*klon.querySelector("h2").innerHTML = kalk.overskrift;
+                klon.querySelector("h2").innerHTML = kalk.content.rendered;
                 klon.querySelector("p").innerHTML = kalk.beskrivelse;
                 klon.querySelector("img").src = kalk.billede.guid;
-                //klon.querySelector(".billede").src = kalk.billede.guid;
-                klon.querySelector("img").src = kalk.billede.guid;
+                klon.querySelector(".billede").src = kalk.billede.guid;
+                klon.querySelector("img").src = kalk.billede.guid;*/
                 klon.querySelector("h2").innerHTML = kalk.overskrift;
-                //klon.querySelector("h2").innerHTML = kalk.content.rendered;
-                klon.querySelector("p").innerHTML = kalk.beskrivelse;
+                klon.querySelector("h3").innerHTML = kalk.h3text;
+                klon.querySelector("p").innerHTML = kalk.beskrivelse + " " + kalk.beskrivelse_2;
+                klon.querySelector("img").src = kalk.billede.guid;
                 klon.querySelector("div").innerHTML = kalk.opening + " " + kalk.kontakt;
+                klon.querySelector("div").innerHTML = kalk.opening_2 + " " + kalk.kontakt_2;
                 //klon.querySelector("div").innerHTML = kalk.kontakt;
                 dest.appendChild(klon);
             });
@@ -244,6 +306,7 @@
             x[myIndex - 1].style.display = "block";
             setTimeout(carousel, 3000); // Change image every 2 seconds
         }
+
     </script>
 </body>
 
