Nu må vi se om Bracket ændre alle mine filer igen

--- a/geomuseet_Faxe.html
+++ b/geomuseet_Faxe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="da" xml:lang="da">
 
 <head>
     <meta charset="UTF-8" />
