Index nu med flag. mangler css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Kalklandet, Stevns Klint, Unesco's verdensarv, geomuseum Faxe, Koldkrigsmuseum" />
-    <meta name="keywords" content="Stevns Klint, UNESCO Verdensarv, Kalklandet" />
+    <meta name="description" content="kalklandet har en stor vifte af attraktioner og storslet natur. vi tilbyder undervisning til skoler" />
+    <meta name="keywords" content="Kalklandet, Stevns Klint, UNESCO Verdensarv, Kalklandet, geomuseum Faxe, Koldkrigsmuseum" />
     <meta name="author" content="Charlotte Fuchs" />
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
     <link rel="stylesheet" type="text/css" href="css/demo.css" />
@@ -19,7 +19,6 @@
             text-align: center;
             display: none;
         }
-
     </style>
 </head>
 
@@ -33,7 +32,7 @@
                         <ul class="menu">
                             <li class="search-item">
                                 <input placeholder="Search" type="search" class="search">
-                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Søg</span></a>
+                                <a class="icon icon-search"><img class="icon" src="slider/ikoner/searchKalklandet.png"><span>Sg</span></a>
                             </li>
                             <li>
                                 <div>
@@ -126,6 +125,13 @@
                         <img class="mySlides" src="slider/stevns_fyr.png" />
                     </div>
                 </div>
+              <div id="flag">
+                    <div class="flag_inner">
+                        <img class="myFlag" src="flag/denmark.jpg" />
+                        <img class="myFlag" src="flag/tyskland.jpg" />
+                        <img class="myFlag" src="flag/united_kingdom.jpg" />
+                    </div>
+            </div><!-- flag -->
             </div><!-- /splash -->
         </header>
     </div><!-- /container -->
@@ -174,9 +180,11 @@
                 <div class="footerFloat">
                     <h4>Vores opgave</h4>
                     <ul>
-                        <li>Formidling</li>
-                        <li>Samarbejds partnere</li>
                         <li>Stevns Klint som verdensarv</li>
+                      <li>Mission og vision</li>
+                      <li>Formidling</li>
+                        <li>Planarbejde</li>
+                      	<li>Samarbejde</li>
                     </ul>
                 </div>
             </div>
@@ -259,6 +267,7 @@
         }
 
     </script>
+
     <script src="js/classie.js"></script>
     <script src="js/myMenu.js"></script>
     <script>
